add ssl auto post
